--- a/src/app/pages/carteraClientes/carteraClientes.component.scss
+++ b/src/app/pages/carteraClientes/carteraClientes.component.scss
@@ -2,6 +2,10 @@
   background: #DCDCDC;
 }
 
+::ng-deep .dx-datagrid-headers {  
+  background: #DCDCDC;  
+} 
+
 ::ng-deep .dx-toast-content {
     min-width: 200px;
     max-width: 400px;
