--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -89,27 +89,60 @@
             <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
             <!-- <dxo-header-filter [visible]="true"></dxo-header-filter> -->
 
-            <dxi-column dataField="compania" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-            <dxi-column dataField="cliente" caption="" [fixed]="true" [groupIndex]="1"></dxi-column>
+            <dxi-column dataField="nombre" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>  <!-- AGRUPACION 1 -->
+            <dxi-column dataField="documento" caption="" [fixed]="true" [groupIndex]="1"></dxi-column><!-- AGRUPACION 2 -->
 
-            <dxi-column dataField="nombre" caption="Nombre"></dxi-column>
-            <dxi-column dataField="serie" caption="Serie" ></dxi-column>
-            <dxi-column dataField="documento" caption="Documento"></dxi-column>
-            <dxi-column dataField="fechaGuia" caption="Fecha guía"></dxi-column>
-            <dxi-column dataField="remision" caption="Remisión"></dxi-column>
-            <dxi-column dataField="recogerEn" caption="Recoger en"></dxi-column>
-            <dxi-column dataField="totalIntegrado" caption="Total integrado" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
-            <dxi-column dataField="diasCredito" caption="Días de crédito"></dxi-column>
-            <dxi-column dataField="fechaVencimiento" caption="Fecha vencimiento"></dxi-column>
-            <dxi-column dataField="fechaCierre" caption="Fecha cierre"></dxi-column>
-            <dxi-column dataField="diasTrans" caption="Días transcurridos"></dxi-column>
-            <dxi-column dataField="observaciones" caption="Obsevaciones"></dxi-column>
-            <dxi-column dataField="" caption="UUID" [width]="100"></dxi-column>
+            <dxi-column dataField="cliente" caption="Serie" [width]="100"></dxi-column>
+            <dxi-column dataField="nombre" caption="Nombre" [width]="100"></dxi-column>
+            <dxi-column dataField="nocarta" caption="Num. Carta" [width]="100"></dxi-column> 
+            <dxi-column dataField="documento" caption="Documento" [width]="100"></dxi-column>
+            <dxi-column dataField="remision" caption="Remisión" [width]="150"></dxi-column>
+            <dxi-column dataField="fechA_GUIA" caption="Fecha guía" [width]="150"></dxi-column>
+            <dxi-column dataField="viaje" caption="Recoger en" [width]="100"></dxi-column>
+            <dxi-column dataField="unidad" caption="Unidad" [width]="100"></dxi-column> 
+            <dxi-column dataField="remolquE1" caption="Remolque 1" [width]="100"></dxi-column> 
+            <dxi-column dataField="totaL_SALDO" caption="Total saldo" [width]="100"></dxi-column> 
+            <dxi-column dataField="totaL_VENCIDOS" caption="Total vencido" [width]="100"></dxi-column> 
+            <dxi-column dataField="saldo" caption="Saldo" [width]="100"></dxi-column>            
+            <dxi-column dataField="porvencido" caption="Por vencer" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS115" caption="Dias 115" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS1630" caption="Dias 1630" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS3145" caption="Dias 3145" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS4660" caption="Dias 4660" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS6190" caption="Dias 6190" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS91120" caption="Dias 91120" [width]="100"></dxi-column> 
+            <dxi-column dataField="diaS120" caption="Dias 120" [width]="100"></dxi-column> 
+            <dxi-column dataField="poR_VENCER" caption="Por vencer" [width]="100"></dxi-column> 
+            <dxi-column dataField="poR_VENCER2" caption="Por vencer 2" [width]="100"></dxi-column> 
+            <dxi-column dataField="dias_vencimiento" caption="Días transcurridos" [width]="140"></dxi-column>
+            <dxi-column dataField="venC17" caption="Venc 17" [width]="100"></dxi-column> 
+            <dxi-column dataField="venC815" caption="Venc 815" [width]="100"></dxi-column> 
+            <dxi-column dataField="venC1630" caption="Venc 1630" [width]="100"></dxi-column> 
+            <dxi-column dataField="venC31" caption="Venc 31" [width]="100"></dxi-column> 
+            <dxi-column dataField="saldO_SIN_CCOBRO" caption="Saldo sin cobro" [width]="100"></dxi-column>
+            <dxi-column dataField="totaL_INTEGRADO" caption="Total integrado" format="$ #,###,###.##;-$ #,##0.##" [width]="100"></dxi-column>
+            <dxi-column dataField="tipO_DE_CREDITO" caption="Tipo de credito" [width]="100"></dxi-column>             
+            <dxi-column dataField="diaS_DECREDITO" caption="Días de crédito" [width]="100"></dxi-column>
+            <dxi-column dataField="subtotal" caption="Subtotal" [width]="100"></dxi-column> 
+            <dxi-column dataField="iva" caption="IVA" [width]="100"></dxi-column>  
+            <dxi-column dataField="fechA_DE_VENCIMIENTO" caption="Fecha vencimiento" [width]="150"></dxi-column>
+            <dxi-column dataField="montO_RETENCION" caption="Monto retención" [width]="100"></dxi-column>            
+            <dxi-column dataField="fechA_CARTA" caption="Fecha cierre" [width]="150"></dxi-column>
+            <dxi-column dataField="factoR_IVA" caption="Factor IVA" [width]="100"></dxi-column> 
+            <dxi-column dataField="factoR_DE_RETENCION" caption="Factor de retención" [width]="100"></dxi-column> 
+            <dxi-column dataField="monto_pago" caption="Monto pago" [width]="100"></dxi-column> 
+            <dxi-column dataField="status_guia" caption="Status guia" [width]="100"></dxi-column> 
+            <dxi-column dataField="tipo_origen" caption="Tipo origen" [width]="100"></dxi-column> 
+            <dxi-column dataField="tipo_doc" caption="Tipo doc." [width]="100"></dxi-column> 
+            <dxi-column dataField="no_poliza" caption="Num. Poliza" [width]="100"></dxi-column> 
+            <dxi-column dataField="no_cartaF" caption="Num. CartaF" [width]="100"></dxi-column> 
+            <dxi-column dataField="id_area" caption="UUID" [width]="100"></dxi-column>
+            <dxi-column dataField="" caption="Obsevaciones" [width]="100"></dxi-column>
             
             <dxo-summary>
-                <dxi-group-item column="totalIntegrado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                <dxi-group-item column="totaL_INTEGRADO" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
         
-                <dxi-total-item column="totalIntegrado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                <dxi-total-item column="totaL_INTEGRADO" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
             </dxo-summary>
 
             <dxo-group-panel [visible]="false"></dxo-group-panel>
