--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -108,7 +108,7 @@
             <dxi-column dataField="nocarta" caption="Num. Carta" [width]="100"></dxi-column> 
             <dxi-column dataField="documento" caption="Documento" [width]="100"></dxi-column>
             <dxi-column dataField="remision" caption="Remisión" [width]="250"></dxi-column>
-            <dxi-column dataField="fechA_GUIA" caption="Fecha guía" [width]="150"></dxi-column>
+            <dxi-column dataField="fechA_GUIA" caption="Fecha guía" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
             <dxi-column dataField="viaje" caption="Viaje" [width]="100"></dxi-column>
             <dxi-column dataField="unidad" caption="Unidad" [width]="100"></dxi-column> 
             <dxi-column dataField="remolquE1" caption="Remolque 1" [width]="100"></dxi-column> 
@@ -136,9 +136,9 @@
             <dxi-column dataField="diaS_DECREDITO" caption="Días de crédito" [width]="150"></dxi-column>
             <dxi-column dataField="subtotal" caption="Subtotal" [width]="100"></dxi-column> 
             <dxi-column dataField="iva" caption="IVA" [width]="100"></dxi-column>  
-            <dxi-column dataField="fechA_DE_VENCIMIENTO" caption="Fecha de vencimiento" [width]="150"></dxi-column>
+            <dxi-column dataField="fechA_DE_VENCIMIENTO" caption="Fecha de vencimiento" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
             <dxi-column dataField="montO_RETENCION" caption="Monto retención" [width]="150"></dxi-column>            
-            <dxi-column dataField="fechA_CARTA" caption="Fecha carta" [width]="150"></dxi-column>
+            <dxi-column dataField="fechA_CARTA" caption="Fecha carta" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
             <dxi-column dataField="factoR_IVA" caption="Factor IVA" [width]="100"></dxi-column> 
             <dxi-column dataField="factoR_DE_RETENCION" caption="Factor de retención" [width]="150"></dxi-column> 
             <dxi-column dataField="monto_pago" caption="Monto pago" [width]="100"></dxi-column> 
